Correcciones de ultimo momento (En WINDOWS)

--- a/apache-tomcat-8.5.70/conf/Catalina/localhost/web.xml
+++ b/apache-tomcat-8.5.70/conf/Catalina/localhost/web.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Context docBase="/Users/federico/ws/Java/innova/appweb/web/build/web" path="/web"/>
+<Context docBase="C:/Users/Administrador/Desktop/Programacion de Aplicaciones/Tarea 2/appweb.git/web/build/web" path="/web"/>
