--- a/web/nbproject/project.properties
+++ b/web/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.beansbinding-1.2.1.jar=/Users/federico/ws/Java/innova/prueba/dist/lib/beansbinding-1.2.1.jar
-file.reference.mysql-connector-java-5.1.41-bin.jar=/Users/federico/ws/Java/innova/prueba/dist/lib/mysql-connector-java-5.1.41-bin.jar
-file.reference.Proyecto_V.jar=/Users/federico/ws/Java/innova/prueba/dist/Proyecto_V.jar
+file.reference.beansbinding-1.2.1.jar=C:\\Users\\Administrador\\Desktop\\Programacion de Aplicaciones\\Tarea 1\\Proyecto\\appswing\\dist\\lib\\beansbinding-1.2.1.jar
+file.reference.mysql-connector-java-5.1.41-bin.jar-1=C:\\Users\\Administrador\\Desktop\\Programacion de Aplicaciones\\Tarea 1\\Proyecto\\appswing\\mysql-connector-java-5.1.41-bin.jar
+file.reference.Proyecto_V.jar-1=C:\\Users\\Administrador\\Desktop\\Programacion de Aplicaciones\\Tarea 1\\Proyecto\\appswing\\dist\\Proyecto_V.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,8 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.beansbinding-1.2.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.41-bin.jar}:\
-    ${file.reference.Proyecto_V.jar}
+    ${file.reference.mysql-connector-java-5.1.41-bin.jar-1}:\
+    ${file.reference.Proyecto_V.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,7 +69,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
