--- a/web/nbproject/private/private.properties
+++ b/web/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=/Users/federico/Library/Application Support/NetBeans/8.2/tomcat80.properties
-j2ee.server.home=/Users/federico/ws/Java/innova/appweb/apache-tomcat-8.5.70
-j2ee.server.instance=tomcat80:home=/Users/federico/ws/Java/innova/appweb/apache-tomcat-8.5.70
-user.properties.file=/Users/federico/Library/Application Support/NetBeans/8.2/build.properties
+deploy.ant.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.home=C:/apache-tomcat-8.5.72
+j2ee.server.instance=tomcat80:home=C:\\apache-tomcat-8.5.72
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
