--- a/web/web/WEB-INF/classes/props_1.properties
+++ b/web/web/WEB-INF/classes/props_1.properties
@@ -5,3 +5,11 @@ ruta.proyecto=C:\\Users\\Administrador\\Desktop\\Programacion de Aplicaciones\\T
 ruta.imagenes.usuarios=\\imagenes\\usuarios
 ruta.imagenes.espectaculos=\\imagenes\\espectaculos
 ruta.imagenes.paquetes=\\imagenes\\paquetes
+ruta.imagenes.funciones=\\imagenes\\funciones
+
+
+ruta.proyecto=/Users/federico/ws/Java/innova/appweb
+ruta.imagenes.usuarios=/imagenes/usuarios
+ruta.imagenes.espectaculos=/imagenes/espectaculos
+ruta.imagenes.paquetes=/imagenes/paquetes
+ruta.imagenes.funciones=/imagenes/funciones
