--- a/appwebV2/nbproject/project.properties
+++ b/appwebV2/nbproject/project.properties
@@ -29,7 +29,6 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-java-5.1.41-bin.jar=/Users/federico/ws/Java/innova/prueba/dist/lib/mysql-connector-java-5.1.41-bin.jar
-file.reference.Proyecto_V.jar=/Users/federico/ws/Java/innova/prueba/dist/Proyecto_V.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,8 +38,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Proyecto_V.jar}:\
-    ${file.reference.mysql-connector-java-5.1.41-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.41-bin.jar}:\
+    ${libs.restlib.classpath}:\
+    ${libs.restapi.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -67,7 +67,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
